<resources>
    <string name="app_name">DishDelish</string>
    <string name="greetingMessage">Hello, %1$s!</string>
    <string name="uploadRecipePageTitle">Upload Recipe</string>
    <string name="uploadRecipePageTip">Fields denoted with * are required</string>
    <string name="uploadRecipePageRecipeName">Recipe Name *</string>
    <string name="reviewRecipePageRecipeName">Recipe Name</string>
    <string name="recipeNameEmptyErrorMessage">Recipe name is required!</string>
    <string name="uploadRecipePageRecipeNameHint">Give your recipe a name</string>
    <string name="uploadRecipePageChooseImg">Choose Image</string>
    <string name="uploadRecipePageButtonText">Upload Recipe</string>
    <string name="prepTime">Prep Time *</string>
    <string name="reviewPrepTime">Prep Time</string>
    <string name="prepTimeHint">0</string>
    <string name="prepTimeEmptyErrorMessage">Preparation time is required!</string>
    <string name="prepTimeInvalidErrorMessage">Preparation time must be positive!</string>
    <string name="cookTime">Cook Time *</string>
    <string name="reviewCookTime">Cook Time</string>
    <string name="cookTimeHint">0</string>
    <string name="cookTimeEmptyErrorMessage">Cooking time is required!</string>
    <string name="cookTimeInvalidErrorMessage">Cooking time must be positive!</string>
    <string name="servings">Servings *</string>
    <string name="reviewServings">Servings</string>
    <string name="servingsHint">e.g. 5</string>
    <string name="servingsEmptyErrorMessage">Number of serving is required!</string>
    <string name="servingsInvalidErrorMessage">Number of serving must be positive!</string>
    <string name="utensils">Utensils</string>
    <string name="reviewUtensils">Utensils</string>
    <string name="utensilsHint">e.g. chopsticks</string>
    <string name="ingredients">Ingredients *</string>
    <string name="reviewIngredients">Ingredients</string>
    <string name="ingredientsAmount">No.</string>
    <string name="ingredientsUnit">Unit</string>
    <string name="ingredientsName">Name</string>
    <string name="ingredientsAmountEmptyErrorMessage">Ingredient amount is required!</string>
    <string name="ingredientsAmountInvalidErrorMessage">Ingredient amount must be positive!</string>
    <string name="ingredientsUnitEmptyErrorMessage">Ingredient unit is required!</string>
    <string name="ingredientsNameEmptyErrorMessage">Ingredient name is required!</string>
    <string name="steps">Steps</string>
    <string name="reviewSteps">Steps</string>
    <string name="stepsEmptyErrorMessage">Step is required!</string>
    <string name="pantry">Pantry</string>
    <string name="allergy">Allergy</string>
    <string name="diet">Diet</string>
    <string name="cuisine">Cuisine</string>
    <string name="ingredientsAmountHint">2</string>
    <string name="ingredientsUnitHint">cups</string>
    <string name="ingredientsNameHint">sugar</string>
    <string name="addIngredients">Add More Ingredient</string>
    <string name="cuisineTypes">Cuisine</string>
    <string name="reviewCuisineTypes">Cuisine</string>
    <string name="addCuisineTypeButton">Add</string>
    <string name="allergyTypes">Allergy</string>
    <string name="reviewAllergyTypes">Allergy</string>
    <string name="addAllergyTypeButton">Add</string>
    <string name="dietTypes">Diet</string>
    <string name="reviewDietTypes">Diet</string>
    <string name="addDietTypeButton">Add</string>
    <string name="step">Directions *</string>
    <string name="reviewStep">Directions</string>
    <string name="addSteps">Add More Step</string>
    <string name="stepHint">e.g. Preheat oven to 350 degrees</string>
    <string name="time_mins">mins</string>
    <string name="time_hours">hours</string>
    <string name="time_days">days</string>
    <string name="image">Photo</string>
    <string name="reviewImage">Photo</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="reviewRecipePageTitle">Review Recipe</string>
    <string name="confirm_uploading">Confirm</string>
    <string name="cancel_uploading">Cancel</string>
    <string name="login_required_popup_title">Login Required</string>
    <string name="login_required_popup_message">Please login before uploading a recipe :)</string>
    <string name="fill_required_fields_popup_message">Please fill required fields before uploading</string>
    <string name="invalid_type_popup_message">Only provided types can be added</string>
    <string name="upload_recipe_error_message">Recipe failed to be uploaded</string>
    <string name="upload_recipe_success_message">Recipe uploaded successfully</string>
    <string name="upload_recipe_image_error_message">Recipe Image failed to be uploaded</string>
    <string name="fetch_recipe_image_error_message">Recipe Image failed to be fetched</string>
    <string name="upload_recipe_image_success_message">Recipe Image uploaded successfully</string>
    <string name="uploading_hint">Uploading...</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btnIcon">v</string>
    <string name="home_menu">Home</string>
    <string name="favorites_menu">Favorites</string>
    <string name="upload_menu">Upload</string>
    <string name="filter_menu">Filter</string>
    <string name="login_menu">Profile</string>
    <string name="about_menu">About</string>
    <string name="about">DishDelish is an excellent recipe application made by a group of students at EPFL in 2023 which allows you making delicious dishes without being a master chef. You can search recipes according to your desire, diet and available ingredients in your fridge. You can also upload, rate and comments recipes.</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="ingCheckTitle">Make sure you have all the ingredients and click  \"Next\" or check the one(s) that you don\'t have and add them to the shopping cart or ask nearby</string>
    <string name="addToShoppingList">Add to shopping cart</string>
    <string name="askNearby">Ask Nearby</string>
</resources>