<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuItem_home"
        android:title="@string/home_menu"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/menuItem_favorites"
        android:title="@string/favorites_menu"
        android:icon="@drawable/baseline_favorite_24"/>
    <item
        android:id="@+id/menuItem_upload"
        android:title="@string/upload_menu"
        android:icon="@drawable/baseline_upload_24"/>
    <item
        android:id="@+id/menuItem_filter"
        android:title="@string/filter_menu"
        android:icon="@drawable/baseline_filter_alt_24"/>
    <item
        android:id="@+id/menuItem_login"
        android:title="@string/login_menu"
        android:icon="@drawable/baseline_login_24"/>
    <item
        android:id="@+id/menuItem_help"
        android:title="Nearby Help" />
    <item
        android:id="@+id/menuItem_about"
        android:title="@string/about_menu"
        android:icon="@drawable/baseline_info_24"/>
</menu>