<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/uploadRecipeTitle"
                android:layout_width="350dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:text="@string/uploadRecipePageTitle"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/recipeName"
                android:layout_width="350dp"
                android:layout_marginTop="35dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadRecipeTitle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadRecipePageRecipeName"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/recipeNameContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uploadRecipePageRecipeNameHint"
                    android:textColorHint="#8e9094"
                    app:startIconDrawable="@drawable/cookie_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prepTime"
                android:layout_width="350dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeName"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prepTime"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/prepTimeContent"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="#8e9094"
                    app:startIconDrawable="@drawable/cookie_clock"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prepTimeHint"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/prepTimeUnit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/prepTimeUnitAutoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cookTime"
                android:layout_width="350dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prepTime"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cookTime"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cookTimeContent"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="#8e9094"
                    app:startIconDrawable="@drawable/cookie_clock"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cookTimeHint"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cookTimeUnit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/cookTimeUnitAutoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/servings"
                android:layout_width="350dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cookTime"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/servings"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/servingsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servingsHint"
                    android:textColorHint="#8e9094"
                    app:startIconDrawable="@drawable/pencil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/utensils"
                android:layout_width="350dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/servings"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/utensils"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/utensilsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/utensilsHint"
                    android:textColorHint="#8e9094"
                    app:startIconDrawable="@drawable/silverware_fork_knife"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ingredientsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_below="@+id/utensils"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ingredients"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ingredientsAmount"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingredientsAmountHint"
                        android:textColorHint="#8e9094"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ingredientsUnit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/ingredientsUnitHint"
                        android:textColorHint="#8e9094"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ingredientsName"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/ingredientsNameHint"
                        android:textColorHint="#8e9094"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addIngredients"
                android:layout_width="350dp"
                android:layout_below="@+id/ingredientsGroup"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/addIngredientButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addIngredients"
                    android:layout_marginTop="10dp"
                    style="?attr/materialButtonOutlinedStyle"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stepGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/addIngredients"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/step"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/stepContent"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/stepHint"
                        android:textColorHint="#8e9094"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addSteps"
                android:layout_width="350dp"
                android:layout_below="@+id/stepGroup"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/addStepButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addSteps"
                    android:layout_marginTop="10dp"
                    style="?attr/materialButtonOutlinedStyle"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipeImage"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/addSteps"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/image"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/recipeImageContent"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_plus" />

            </LinearLayout>



            <View
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/recipeImage"
                android:layout_centerHorizontal="true"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/recipeUpload"
                android:layout_width="350dp"
                android:layout_below="@+id/recipeImage"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/recipeUploadButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadRecipePageButtonText"
                    />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>